--- a/templates/HindiVowelTile.html
+++ b/templates/HindiVowelTile.html
@@ -1,7 +1,7 @@
 <div class="boxLetter centered">
 	<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 centered  imgBox">
 		<img  class="img-responsive" 
-				ng-src="images/{{akshar.exm}}" ng-show="!imgShow" ng-hide="akshar.word==''" >			
+				ng-src="images/{{akshar.exm}}" ng-show="imgShow" ng-hide="akshar.word==''" >			
 		</img>		
 	</div>
 	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" >
