--- a/templates/WordTile.html
+++ b/templates/WordTile.html
@@ -1,6 +1,6 @@
 <div class=" row boxLetter centered">
 	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 centered aks" >
-		<button type="button" class="btn btn-secondary aks" ng-click="toggleShow()" ng-bind-html=" akshar.utf8Code | safeHTML"></button>
+		<button type="button" class="btn btn-secondary aks" ng-click="imgShow=!imgShow" ng-bind-html=" akshar.utf8Code | safeHTML"></button>
 	</div> 
 	<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 centered  imgBox">
 		<img class="img-responsive" ng-src="images/{{akshar.exm}}" ng-show="imgShow" ng-hide="akshar.word==''"></img>
